--- a/customized.html
+++ b/customized.html
@@ -210,7 +210,7 @@
         </section>
         </section>
 
-        <script>
+        <!-- <script>
             //測試一
             /*         function click_box(box) {
                         const who_click = document.getElementById(click_box_1);
@@ -261,8 +261,9 @@
             }
 
 
-        </script>
+        </script> -->
     </main>
+    <script src="./js/customized.js"></script>
 </body>
 
 </html>
