--- a/index.html
+++ b/index.html
@@ -1,11 +1,74 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Document</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
-<body>
-首頁還沒做
+<header id="topbar">
+    <div class="navbar">
+        <nav class="navigation">
+            <ul class="menu">
+                <li><a href="#">HOME</a></li>
+                <li><a href="#">SHOP</a></li>
+                <li><a href="#">ABOUT</a></li>
+                <li><a href="#">NEWS</a></li>
+                <li><a href="#">Q&A</a></li>
+                <li><a href="#" class="customized-btn">customized</a></li>
+            </ul>
+            <ul class="icon">
+                <button></button>
+                <li><a class="icon-member" href=""></a></li>
+                <li><a class="icon-car" href=""></a></li>
+                <li><a class="icon-search" href=""></a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+<main>
+
+    <body>
+        <section id="BANNER">
+            <div class="banner-content">
+                <div class="logo">
+                    <img src="./index_images/logo.png" alt="">
+                </div>
+                <div></div>
+                <div class="arch"><img class="circle_text" src="./index_images/banner--circle-text.svg" alt=""></div>
+                <div></div>
+            </div>
+        </section>
+        <section id="CUSTOMIZED">
+
+            <div class="cust_item">
+                <div class="step"><img src="./index_images/step1.png" alt=""></div>
+                <div class="step"><img src="./index_images/step2.png" alt=""></div>
+                <div class="step"><img src="./index_images/step3.png" alt=""></div>
+            </div>
+            <a class="btn_diy" href="./customized.html">
+                <div class="btn_content">開始設計</div>
+            </a>
+
+        </section>
+        <section id="CLASSIC">
+            <div class="section_class">
+                <div class="little_bg"></div>
+                <img class="circle_title" src="./index_images/classic--circle-text.svg" alt="">
+                <img class="title" src="./index_images/classic_title.svg" alt="">
+                <img class="main_pic" src="./index_images/classic--pic.png" alt="">
+
+            </div>
+        </section>
+        <section id="ABOUT"></section>
+        <section id="QUALITY"></section>
+        <section id="INGREDIENT"></section>
+        <section id="TASTE"></section>
+        <section id="APPERANCE"></section>
+</main>
+<footer></footer>
+<div></div>
 </body>
+
 </html>
