--- a/Customization.html
+++ b/Customization.html
@@ -12,12 +12,14 @@
     <main id="main">
         <div id="menu">
             <ul id="menu_id">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">SHOP</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">NEWS</a></li>
-                <li><a href="#">Q&A</a></li>
-                <li><a href="#" id="customized">customized</a></li>
+                <li id="menu_id_li"><a href="#">HOME</a></li>
+                <li id="menu_id_li"><a href="#">SHOP</a></li>
+                <li id="menu_id_li"><a href="#">ABOUT</a></li>
+                <li id="menu_id_li"><a href="#">NEWS</a></li>
+                <li id="menu_id_li"><a href="#">Q&A</a></li>
+                <li><a href="#" id="customized">
+                        <p>customized</p>
+                    </a></li>
                 <li><a href="#"><img src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a></li>
                 <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
                             alt=""></a></li>
