0815-Chocolate_custom_screen3

--- a/Customization.html
+++ b/Customization.html
@@ -17,9 +17,7 @@
                 <li id="menu_id_li"><a href="#">ABOUT</a></li>
                 <li id="menu_id_li"><a href="#">NEWS</a></li>
                 <li id="menu_id_li"><a href="#">Q&A</a></li>
-                <li><a href="#" id="customized">
-                        <p>customized</p>
-                    </a></li>
+                <li><a href="#" id="customized"><p>customized</p></a></li>
                 <li><a href="#"><img src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a></li>
                 <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
                             alt=""></a></li>
@@ -30,24 +28,24 @@
             <div id="left_sidebar">
                 <ul id="left_sidebar_ul">
                     <li><a href="#" id="left_sidebar_btn1" class="left_sidebar_btn1"><img
-                                src="./images/Custom_block/left sidebar/chocolate 1.svg" alt="">
-                            <p class="left_sidebar_p">口味</p>
+                                src="./images/Custom_block/left sidebar/chocolate -1.svg" alt="">
+                            <!-- <p class="left_sidebar_p">口味</p> -->
                         </a></li>
-                    <li><a href="#" id="left_sidebar_btn2"><img src="./images/Custom_block/left sidebar/acai 2.svg"
+                    <li><a href="#" id="left_sidebar_btn2"><img src="./images/Custom_block/left sidebar/chocolate -2.svg"
                                 alt="">
-                            <p class="left_sidebar_p">配料</p>
+                            <!-- <p class="left_sidebar_p">配料</p> -->
                         </a></li>
                     <li><a href="#" id="left_sidebar_btn3"><img
-                                src="./images/Custom_block/left sidebar/text-recognising3.svg" alt="">
-                            <p class="left_sidebar_p">文字</p>
+                                src="./images/Custom_block/left sidebar/chocolate -3.svg" alt="">
+                            <!-- <p class="left_sidebar_p">文字</p> -->
                         </a></li>
-                    <li><a href="#" id="left_sidebar_btn4"><img src="./images/Custom_block/left sidebar/image4.svg"
+                    <li><a href="#" id="left_sidebar_btn4"><img src="./images/Custom_block/left sidebar/chocolate -4.svg"
                                 alt="">
-                            <p class="left_sidebar_p">裝飾</p>
+                            <!-- <p class="left_sidebar_p">裝飾</p> -->
                         </a></li>
-                    <li><a href="#" id="left_sidebar_btn5"><img src="./images/Custom_block/left sidebar/palette 5.svg"
+                    <li><a href="#" id="left_sidebar_btn5"><img src="./images/Custom_block/left sidebar/chocolate -5.svg"
                                 alt="">
-                            <p class="left_sidebar_p">模板</p>
+                            <!-- <p class="left_sidebar_p">模板</p> -->
                         </a></li>
                 </ul>
                 <div class="left_menu">
