--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>首頁</title>
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <header id="topbar">
@@ -58,6 +58,13 @@
                 <img class="circle_title" src="./index_images/classic--circle-text.svg" alt="">
                 <img class="title" src="./index_images/classic_title.svg" alt="">
                 <img class="main_pic" src="./index_images/classic--pic.png" alt="">
+                <a href=""><img class="class_btn" src="./index_images/classic_btn.svg" alt=""></a>
+                <div class="text_all">
+                <div class="text1">我們秉持著精益求精的態度</div>
+                <div class="text2"> ᅟᅠ從全球各地精選最優質的可可豆</div>
+                <div class="text3"> ᅟᅠ每一顆都經過嚴格篩選與手工處理</div>
+                <div class="text4">確保呈現給您的每一口都是純粹的享受</div>
+                </div>
 
             </div>
         </section>
