0815-Chocolate_custom_screen5

--- a/Customization.html
+++ b/Customization.html
@@ -17,7 +17,9 @@
                 <li id="menu_id_li"><a href="#">ABOUT</a></li>
                 <li id="menu_id_li"><a href="#">NEWS</a></li>
                 <li id="menu_id_li"><a href="#">Q&A</a></li>
-                <li><a href="#" id="customized"><p>customized</p></a></li>
+                <li><a href="#" id="customized">
+                        <p>customized</p>
+                    </a></li>
                 <li><a href="#"><img src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a></li>
                 <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
                             alt=""></a></li>
@@ -31,20 +33,20 @@
                                 src="./images/Custom_block/left sidebar/chocolate -1.svg" alt="">
                             <!-- <p class="left_sidebar_p">口味</p> -->
                         </a></li>
-                    <li><a href="#" id="left_sidebar_btn2"><img src="./images/Custom_block/left sidebar/chocolate -2.svg"
-                                alt="">
+                    <li><a href="#" id="left_sidebar_btn2"><img
+                                src="./images/Custom_block/left sidebar/chocolate -2.svg" alt="">
                             <!-- <p class="left_sidebar_p">配料</p> -->
                         </a></li>
                     <li><a href="#" id="left_sidebar_btn3"><img
                                 src="./images/Custom_block/left sidebar/chocolate -3.svg" alt="">
                             <!-- <p class="left_sidebar_p">文字</p> -->
                         </a></li>
-                    <li><a href="#" id="left_sidebar_btn4"><img src="./images/Custom_block/left sidebar/chocolate -4.svg"
-                                alt="">
+                    <li><a href="#" id="left_sidebar_btn4"><img
+                                src="./images/Custom_block/left sidebar/chocolate -4.svg" alt="">
                             <!-- <p class="left_sidebar_p">裝飾</p> -->
                         </a></li>
-                    <li><a href="#" id="left_sidebar_btn5"><img src="./images/Custom_block/left sidebar/chocolate -5.svg"
-                                alt="">
+                    <li><a href="#" id="left_sidebar_btn5"><img
+                                src="./images/Custom_block/left sidebar/chocolate -5.svg" alt="">
                             <!-- <p class="left_sidebar_p">模板</p> -->
                         </a></li>
                 </ul>
@@ -121,7 +123,9 @@
                                 </img>
                             </li>
                         </ul>
-                        <img src="./images/Custom_block/divider.svg" alt="" class="left_menu2_divider">
+                        <div id="left_menu2_hr">
+                            <img src="./images/Custom_block/divider.svg" alt="" class="left_menu2_divider">
+                        </div>
                         <div class="left_menu2_div2">
                             <p class="left_menu2_div1_p">果乾</p>
                             <ul>
@@ -142,7 +146,9 @@
                                 </li>
                             </ul>
                         </div>
-                        <img src="./images/Custom_block/divider.svg" alt="" class="left_menu2_divider">
+                        <div id="left_menu2_hr">
+                            <img src="./images/Custom_block/divider.svg" alt="" class="left_menu2_divider">
+                        </div>
                         <div class="left_menu2_div2">
                             <p class="left_menu2_div1_p">乾燥花瓣</p>
                             <ul>
@@ -204,9 +210,36 @@
                             </a>
                         </li>
                     </ul>
-                    <img src="./images/Custom_block/divider.svg" alt="" class="left_menu2_divider">
-                    <div id="left_menu_right3"><a href=""><img src="./images/Custom_block/left menu/Frame right.svg"
-                                alt="" class="left_menu_right1_img"></a></div>
+                    <div id="left_menu3_hr">
+                        <img src="./images/Custom_block/divider.svg" alt="" class="left_menu2_divider">
+                    </div>
+                    <div id="left_menu3_div3_div">
+                        <p>模板</p>
+                        <div>
+                            <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 15.svg"
+                                    alt=""></a>
+                            <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 15.svg"
+                                    alt=""></a>
+                            <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 15.svg"
+                                    alt=""></a>
+                            <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 15.svg"
+                                    alt=""></a>
+                            <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 15.svg"
+                                    alt=""></a>
+                            <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 15.svg"
+                                    alt=""></a>
+                           <!--  <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 15.svg"
+                                    alt=""></a> -->
+                            <!-- <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 15.svg"
+                                    alt=""></a>
+                            <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 15.svg"
+                                    alt=""></a> -->
+                        </div>
+                    </div>
+                    <div id="left_menu_right3"><a href="">
+                        <img src="./images/Custom_block/left menu/Frame right.svg"
+                                alt="" class="left_menu_right1_img"></a>
+                            </div>
                 </div>
                 <div class="left_menu4">
                     <p class="left_menu4_p">裝飾</p>
@@ -218,7 +251,9 @@
                         <p class="left_menu4_search_p_2">鳥</p>
                         <p class="left_menu4_search_p_3">愛心</p>
                     </div>
-                    <hr>
+                    <div id="left_menu4_hr">
+                        <img src="./images/Custom_block/divider.svg" alt="" class="left_menu2_divider">
+                    </div>
                     <p class="left_menu4_in_hr_p">熱門</p>
                     <div class="left_menu4_img">
                         <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 5.svg" alt=""></a>
