--- a/Customization_two_page.html
+++ b/Customization_two_page.html
@@ -19,19 +19,20 @@
                 <li><a href="#">Q&A</a></li>
                 <li><a href="#" id="customized">customized</a></li>
                 <li><a href="#"><img src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a></li>
-                <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg" alt=""></a></li>
+                <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
+                            alt=""></a></li>
                 <li><a href="#"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a></li>
             </ul>
         </div>
         <div id="all">
             <div id="left_sidebar_second_page">
                 <ul>
-                    <li class="left_sidebar_img"><a href="#"><img src="./images/Custom_block/small chocolate/left sidebar/Frame 1.svg"
-                                alt=""></a></li>
+                    <li class="left_sidebar_img"><a href="#"><img
+                                src="./images/Custom_block/small chocolate/left sidebar/Frame 1.svg" alt=""></a></li>
                     <li class="left_sidebar_img" id="left_sidebar_img_2"><a href="#"><img
                                 src="./images/Custom_block/small chocolate/left sidebar/Frame 2.svg" alt=""></a></li>
-                    <li class="left_sidebar_img"><a href="#"><img src="./images/Custom_block/small chocolate/left sidebar/Frame 3.svg"
-                                alt=""></a></li>
+                    <li class="left_sidebar_img"><a href="#"><img
+                                src="./images/Custom_block/small chocolate/left sidebar/Frame 3.svg" alt=""></a></li>
                 </ul>
                 <div id="select_field1__second_page">
                     <p>口味</p>
@@ -57,32 +58,32 @@
                         <a href="#"><img src="./images/Custom_block/small chocolate/left sidebar/Frame 9.svg" alt=""
                                 class="select_field2_img"></a>
                     </div>
-                    <div>
+                    <div id="select_field2__second_page_hr">
                         <img src="./images/Custom_block/small chocolate/left sidebar/Rectangle 999.svg" alt="">
                     </div>
                     <div>
                         <p id="select_field2__second_page_p2">果乾</p>
                         <div id="select_field2__second_page_div2">
-                            <a href="#"><img src="./images/Custom_block/small chocolate/left sidebar/Frame 10.svg" alt=""
-                                    class="select_field2__second_page_img"></a>
-                            <a href="#"><img src="./images/Custom_block/small chocolate/left sidebar/Frame 11.svg" alt=""
-                                    class="select_field2__second_page_img"></a>
-                            <a href="#"><img src="./images/Custom_block/small chocolate/left sidebar/Frame 12.svg" alt=""
-                                    class="select_field2__second_page_img"></a>
+                            <a href="#"><img src="./images/Custom_block/small chocolate/left sidebar/Frame 10.svg"
+                                    alt="" class="select_field2__second_page_img"></a>
+                            <a href="#"><img src="./images/Custom_block/small chocolate/left sidebar/Frame 11.svg"
+                                    alt="" class="select_field2__second_page_img"></a>
+                            <a href="#"><img src="./images/Custom_block/small chocolate/left sidebar/Frame 12.svg"
+                                    alt="" class="select_field2__second_page_img"></a>
                         </div>
                     </div>
-                    <div>
+                    <div id="select_field2__second_page_hr">
                         <img src="./images/Custom_block/small chocolate/left sidebar/Rectangle 999.svg" alt="">
                     </div>
                     <div>
                         <p id="select_field2__second_page_p3">果醬</p>
                         <div id="select_field2__second_page_div3">
-                            <a href="#"><img src="./images/Custom_block/small chocolate/left sidebar/Frame 13.svg" alt=""
-                                    class="select_field2__second_page_img"></a>
-                            <a href="#"><img src="./images/Custom_block/small chocolate/left sidebar/Frame 14.svg" alt=""
-                                    class="select_field2__second_page_img"></a>
-                            <a href="#"><img src="./images/Custom_block/small chocolate/left sidebar/Frame 15.svg" alt=""
-                                    class="select_field2__second_page_img"></a>
+                            <a href="#"><img src="./images/Custom_block/small chocolate/left sidebar/Frame 13.svg"
+                                    alt="" class="select_field2__second_page_img"></a>
+                            <a href="#"><img src="./images/Custom_block/small chocolate/left sidebar/Frame 14.svg"
+                                    alt="" class="select_field2__second_page_img"></a>
+                            <a href="#"><img src="./images/Custom_block/small chocolate/left sidebar/Frame 15.svg"
+                                    alt="" class="select_field2__second_page_img"></a>
                         </div>
                     </div>
                     <div id="select_field2__second_page_btn">
@@ -125,8 +126,7 @@
             </div>
             <div id="center_display_second_page">
                 <img src="" alt="">
-                <div>
-                    <img src="" alt="">
+                <div class="center_display_second_page_box">
                 </div>
             </div>
             <div id="right_sidebar_second_page">
@@ -143,16 +143,23 @@
         <div id="menu_below">
             <div>
                 <ul>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 1.svg" alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 2.svg" alt=""></a></li>
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 1.svg"
+                                alt=""></a></li>
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 2.svg"
+                                alt=""></a></li>
                     <li class="menu_below_li"><a href="#" id="menu_below_bug"><img
-                                src="./images/Custom_block/menu below/material-symbols-light_crop-rotate-rounded.svg" alt="">
+                                src="./images/Custom_block/menu below/material-symbols-light_crop-rotate-rounded.svg"
+                                alt="">
                             <p>旋轉</p>
                         </a></li>
-                    <li id="garbage_can"><a href="#"><img src="./images/Custom_block/menu below/Frame 4.svg" alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 5.svg" alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 6.svg" alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 7.svg" alt=""></a></li>
+                    <li id="garbage_can"><a href="#"><img src="./images/Custom_block/menu below/Frame 4.svg" alt=""></a>
+                    </li>
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 5.svg"
+                                alt=""></a></li>
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 6.svg"
+                                alt=""></a></li>
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 7.svg"
+                                alt=""></a></li>
                 </ul>
             </div>
         </div>
