--- a/Customization_three_page.html
+++ b/Customization_three_page.html
@@ -19,7 +19,8 @@
                 <li><a href="#">Q&A</a></li>
                 <li><a href="#" id="customized">customized</a></li>
                 <li><a href="#"><img src="./images/Custom_block/menu/material-symbols-light_search.svg" alt=""></a></li>
-                <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg" alt=""></a></li>
+                <li><a href="#"><img src="./images/Custom_block/menu/shopping-cart-basket-1--shopping-basket.svg"
+                            alt=""></a></li>
                 <li><a href="#"><img src="./images/Custom_block/menu/Vector.svg" alt=""></a></li>
             </ul>
         </div>
@@ -30,7 +31,8 @@
                                 src="./images/Custom_block/small chocolate/left sidebar/Frame 1.svg" alt=""></a></li>
                     <li class="left_sidebar_img" id="left_sidebar_img_2"><a href="#"><img
                                 src="./images/Custom_block/small chocolate//left sidebar/Frame 2.svg" alt=""></a></li>
-                    <li class="left_sidebar_img"><a href="#"><img src="./images/Custom_block/box/left menu/Frame 3.svg" alt=""></a>
+                    <li class="left_sidebar_img"><a href="#"><img src="./images/Custom_block/box/left menu/Frame 3.svg"
+                                alt=""></a>
                     </li>
                 </ul>
                 <div id="left_sidebar_three_page_div1">
@@ -41,7 +43,9 @@
                             <a href="#"><img src="./images/Custom_block/box/left sidebar/Frame 2.svg" alt=""></a>
                         </div>
                     </div>
-                    <img src="./images/Custom_block/box/Rectangle 4.svg" alt="">
+                    <div id="left_sidebar_three_page_div1_hr">
+                        <img src="./images/Custom_block/box/Rectangle 4.svg" alt="">
+                    </div>
                     <div id="left_sidebar_three_page_div1_2">
                         <p>情人節</p>
                         <div>
@@ -50,7 +54,9 @@
                             <a href="#"><img src="./images/Custom_block/box/left sidebar/Frame 5.svg" alt=""></a>
                         </div>
                     </div>
-                    <img src="./images/Custom_block/box/Rectangle 4.svg" alt="">
+                    <div id="left_sidebar_three_page_div1_hr">
+                        <img src="./images/Custom_block/box/Rectangle 4.svg" alt="">
+                    </div>
                     <div id="left_sidebar_three_page_div1_3">
                         <p>生日</p>
                         <div>
@@ -90,7 +96,7 @@
                         <a href="#"><img src="./images/Custom_block/box/left sidebar/Frame 19.svg" alt=""></a>
                         <a href="#"><img src="./images/Custom_block/box/left sidebar/Frame 20.svg" alt=""></a>
                     </div>
-                    <div>
+                    <div id="left_sidebar_three_page_div3_hr">
                         <img src="./images/Custom_block/box/Rectangle 4.svg" alt="">
                     </div>
                     <div id="left_sidebar_three_page_div3_div_2">
@@ -108,17 +114,16 @@
             </div>
             <div id="center_display_second_page">
                 <img src="" alt="">
-                <div>
-                    <img src="" alt="">
+                <div class="center_display_second_page_box">
                 </div>
             </div>
             <div id="right_sidebar_second_page">
                 <div>
                     <ul>
-                        <li><a href=""><img src="./images/Custom_block/small chocolate//left sidebar/Frame 28.svg" alt=""
-                                    class="right_sidebar_img"></a></li>
-                        <li><a href=""><img src="./images/Custom_block/small chocolate//left sidebar/Frame 29.svg" alt=""
-                                    class="right_sidebar_img"></a></li>
+                        <li><a href=""><img src="./images/Custom_block/small chocolate//left sidebar/Frame 28.svg"
+                                    alt="" class="right_sidebar_img"></a></li>
+                        <li><a href=""><img src="./images/Custom_block/small chocolate//left sidebar/Frame 29.svg"
+                                    alt="" class="right_sidebar_img"></a></li>
                     </ul>
                 </div>
             </div>
@@ -126,16 +131,23 @@
         <div id="menu_below">
             <div>
                 <ul>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 1.svg" alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 2.svg" alt=""></a></li>
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 1.svg"
+                                alt=""></a></li>
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 2.svg"
+                                alt=""></a></li>
                     <li class="menu_below_li"><a href="#" id="menu_below_bug"><img
-                                src="./images/Custom_block/menu below/material-symbols-light_crop-rotate-rounded.svg" alt="">
+                                src="./images/Custom_block/menu below/material-symbols-light_crop-rotate-rounded.svg"
+                                alt="">
                             <p>旋轉</p>
                         </a></li>
-                    <li id="garbage_can"><a href="#"><img src="./images/Custom_block/menu below/Frame 4.svg" alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 5.svg" alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 6.svg" alt=""></a></li>
-                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 7.svg" alt=""></a></li>
+                    <li id="garbage_can"><a href="#"><img src="./images/Custom_block/menu below/Frame 4.svg" alt=""></a>
+                    </li>
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 5.svg"
+                                alt=""></a></li>
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 6.svg"
+                                alt=""></a></li>
+                    <li class="menu_below_li"><a href="#"><img src="./images/Custom_block/menu below/Frame 7.svg"
+                                alt=""></a></li>
                 </ul>
             </div>
         </div>
@@ -145,7 +157,8 @@
                     <li id="Prompt_field_img0"><img src="./images/Custom_block/Prompt field/Frame 30.svg " alt=""></li>
                     <li id="Prompt_field_img1"><img src="./images/Custom_block/Prompt field/Frame 31.svg" alt=""></li>
                     <li id="Prompt_field_img2"><img src="./images/Custom_block/Prompt field/Frame 2.svg" alt=""></li>
-                    <li id="Prompt_field_img3"><img src="./images/Custom_block/box/left sidebar/Frame 27.svg" alt=""></li>
+                    <li id="Prompt_field_img3"><img src="./images/Custom_block/box/left sidebar/Frame 27.svg" alt="">
+                    </li>
                     <li id="Prompt_field_img4"><img src="./images/Custom_block/Prompt field/Frame 4.svg" alt=""></li>
                     <li id="Prompt_field_img5"><img src="./images/Custom_block/Prompt field/Group 5.svg" alt=""></li>
                 </ul>
