0816-Chocolate_custom_screen2

--- a/Customization.html
+++ b/Customization.html
@@ -228,19 +228,20 @@
                                     alt=""></a>
                             <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 15.svg"
                                     alt=""></a>
-                           <!--  <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 15.svg"
-                                    alt=""></a> -->
-                            <!-- <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 15.svg"
+                            <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 15.svg"
                                     alt=""></a>
                             <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 15.svg"
-                                    alt=""></a> -->
+                                    alt=""></a>
+                            <a href="#"><img src="./images/Custom_block/left menu/third floor/Ellipse 15.svg"
+                                    alt=""></a>
                         </div>
                     </div>
-                    <div id="left_menu_right3"><a href="">
-                        <img src="./images/Custom_block/left menu/Frame right.svg"
-                                alt="" class="left_menu_right1_img"></a>
-                            </div>
                 </div>
+                <div id="left_menu_right3"><a href="">
+                        <img src="./images/Custom_block/left menu/Frame right.svg" alt=""
+                            class="left_menu_right1_img"></a>
+                </div>
+
                 <div class="left_menu4">
                     <p class="left_menu4_p">裝飾</p>
                     <div class="left_menu4_div_input">
@@ -290,6 +291,7 @@
                 </div>
                 <div class="middle_box">
                     <div>
+                        <img src="./images/Custom_block/middle/downloadedImage-Photoroom 5.svg" alt="">
                         <!-- <img src="./image/middle/downloadedImage-Photoroom 4.svg" alt="" class="middle_box_img1"> -->
                         <!-- <img src="./image/middle/downloadedImage 1.svg" alt="" class="middle_box_img2"> -->
                         <!-- <img src="./image/middle/downloadedImage 2.svg" alt="" class="middle_box_img3"> -->
