--- a/Customization_four_page.html
+++ b/Customization_four_page.html
@@ -117,8 +117,9 @@
                 </div>
             </div>
             <div id="center_display_second_page">
-                <img src="" alt="">
+                <img id="center_display_second_page_card1" src="./images/Custom_block/Customized cards/downloadedImage 1.svg" alt="">
                 <div class="center_display_second_page_box">
+                    <img src="./images/Custom_block/Customized cards/downloadedImage 2.svg" alt="">
                 </div>
             </div>
             <div id="right_sidebar_second_page">
