--- a/Customization_three_page.html
+++ b/Customization_three_page.html
@@ -113,8 +113,11 @@
                 </div>
             </div>
             <div id="center_display_second_page">
-                <img src="" alt="">
+                <div id="center_display_second_page_make_img">
+                    <img src="./images/Custom_block/box/downloadedImage__1.svg" alt="">
+                </div>
                 <div class="center_display_second_page_box">
+                    <img id="center_display_second_page_box2" src="./images/Custom_block/box/downloadedImage__2.svg" alt="">
                 </div>
             </div>
             <div id="right_sidebar_second_page">
