--- a/Customization_two_page.html
+++ b/Customization_two_page.html
@@ -125,8 +125,11 @@
 
             </div>
             <div id="center_display_second_page">
-                <img src="" alt="">
+                <div id="center_display_second_page_make_img">
+                    <img src="./images/Custom_block/small chocolate/downloadedImage 1.svg" alt="">
+                </div>
                 <div class="center_display_second_page_box">
+                    <img id="center_display_second_page_box1" src="./images/Custom_block/small chocolate/downloadedImage 2.svg" alt="">
                 </div>
             </div>
             <div id="right_sidebar_second_page">
