--- a/index.html
+++ b/index.html
@@ -31,13 +31,25 @@
 
     <body>
         <section id="BANNER">
+
+            <div class="logo">
+                <img src="./index_images/logo.png" alt="">
+            </div>
             <div class="banner-content">
-                <div class="logo">
-                    <img src="./index_images/logo.png" alt="">
+                <div class="choc">
+                    <div class="title_white">choc</div>
+                    <div class="title_br">choc</div>
                 </div>
-                <div></div>
-                <div class="arch"><img class="circle_text" src="./index_images/banner--circle-text.svg" alt=""></div>
-                <div></div>
+                <div class="arch_wrap">
+                    <div class="arch"></div>
+                    <img class="circle_text" src="./index_images/banner--circle-text.svg" alt="">
+
+                </div>
+                
+                <div class="olate">
+                    <div class="title_white">olate</div>
+                    <div class="title_br">olate</div>
+                </div>
             </div>
         </section>
         <section id="CUSTOMIZED">
@@ -60,10 +72,10 @@
                 <img class="main_pic" src="./index_images/classic--pic.png" alt="">
                 <a href=""><img class="class_btn" src="./index_images/classic_btn.svg" alt=""></a>
                 <div class="text_all">
-                <div class="text1">我們秉持著精益求精的態度</div>
-                <div class="text2"> ᅟᅠ從全球各地精選最優質的可可豆</div>
-                <div class="text3"> ᅟᅠ每一顆都經過嚴格篩選與手工處理</div>
-                <div class="text4">確保呈現給您的每一口都是純粹的享受</div>
+                    <div class="text1">我們秉持著精益求精的態度</div>
+                    <div class="text2"> ᅟᅠ從全球各地精選最優質的可可豆</div>
+                    <div class="text3"> ᅟᅠ每一顆都經過嚴格篩選與手工處理</div>
+                    <div class="text4">確保呈現給您的每一口都是純粹的享受</div>
                 </div>
 
             </div>
