--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         </section>
         <section id="CLASSIC">
-            <div class="section_class">
+            <div class="section_classic">
                 <div class="little_bg"></div>
                 <img class="circle_title" src="./index_images/classic--circle-text.svg" alt="">
                 <img class="title" src="./index_images/classic_title.svg" alt="">
@@ -73,18 +73,59 @@
                 <a href=""><img class="class_btn" src="./index_images/classic_btn.svg" alt=""></a>
                 <div class="text_all">
                     <div class="text1">我們秉持著精益求精的態度</div>
-                    <div class="text2"> ᅟᅠ從全球各地精選最優質的可可豆</div>
-                    <div class="text3"> ᅟᅠ每一顆都經過嚴格篩選與手工處理</div>
+                    <div class="text2">從全球各地精選最優質的可可豆</div>
+                    <div class="text3">每一顆都經過嚴格篩選與手工處理</div>
                     <div class="text4">確保呈現給您的每一口都是純粹的享受</div>
+                </div>
+            </div>
+        </section>
+        <section id="ABOUT">
+            <div class="section_about">
+                <img class="main_pic" src="./index_images/about--pic.png" alt="">
+                <img class="title" src="./index_images/about--title.svg" alt="">
+                <div class="little_bg"></div>
+                <img class="circle_title" src="./index_images/about--circle-text.png" alt="">
+                <div class="text_all">
+                    <div class="text1">在Mélange</div>
+                    <div class="text2">巧克力都可以根據你的需求量身定制</div>
+                    <div class="text3">無論是刻上名字，還是融入特殊元素</div>
+                    <div class="text4">我們都能滿足你的個性化需求</div>
+                    <div class="text5">讓每一份禮物更加獨特而珍貴</div>
+                </div>
+            </div>
+            </div>
+        </section>
+        <section id="QUALITY">
+            <div class="section_quality">
+                <div class="bg_bottom"></div>
+                <img class="quality_banner" src="./index_images/quality--all.svg" alt="">
+
+            </div>
+        </section>
+        <section id="INGREDIENT">
+            <div class="section_ingredient">
+                <div class="cn_title">從原料精選的量身訂製</div>
+                <img class="title" src="./index_images/ingredient-title.svg" alt="">
+                <img class="pic" src="./index_images/ingredient--pic.png" alt="">
+                <div class="arch"></div>
+                <div class="box_br"></div>
+                <div class="text_all">
+                    <div class="text1">我們秉持著精益求精的態度，從全球各地</div>
+                    <div class="text2">精選最優質的可可豆，每一顆都經過</div>
+                    <div class="text3">嚴格篩選與手工處理，確保呈現給您的</div>
+                    <div class="text4">每一口都是純粹的享受。</div>
                 </div>
 
             </div>
         </section>
-        <section id="ABOUT"></section>
-        <section id="QUALITY"></section>
-        <section id="INGREDIENT"></section>
-        <section id="TASTE"></section>
-        <section id="APPERANCE"></section>
+        <section id="TASTE">
+            <img src="./index_images/taste.svg" alt="">
+        </section>
+        <section id="APPERANCE">
+            <img src="./index_images/appearance.svg" alt="">
+        </section>
+
+        </section>
 </main>
 <footer></footer>
 <div></div>
