--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <img class="circle_text" src="./index_images/banner--circle-text.svg" alt="">
 
                 </div>
-                
+
                 <div class="olate">
                     <div class="title_white">olate</div>
                     <div class="title_br">olate</div>
@@ -119,13 +119,42 @@
             </div>
         </section>
         <section id="TASTE">
-            <img src="./index_images/taste.svg" alt="">
+            <div class="section_taste">
+                <div class="cn_title">多樣化的口味自由搭配</div>
+                <img class="title" src="./index_images/taste-title.svg" alt="">
+                <img class="pic" src="./index_images/taste--pic.svg" alt="">
+                <div class="arch"></div>
+                <div class="box_br"></div>
+                <div class="text_all">
+                    <div class="text1">巧克力的世界無限可能。無論您是熱</div>
+                    <div class="text2">愛經典的黑巧克力，還是偏好細膩的</div>
+                    <div class="text3">牛奶巧克力，甚至是充滿驚喜的果仁和</div>
+                    <div class="text4">香料，我們都能滿足您的味蕾</div>
+                </div>
+
+            </div>
         </section>
         <section id="APPERANCE">
-            <img src="./index_images/appearance.svg" alt="">
-        </section>
+            <div class="section_apperance">
+                <div class="cn_title">可品嚐的視覺饗宴</div>
+                <img class="title" src="./index_images/appearance--title.svg" alt="">
+                <img class="pic" src="./index_images/appearance--pic.svg" alt="">
+                <div class="arch"></div>
+                <div class="box_br"></div>
+                <div class="text_all">
+                    <div class="text1">我們的巧克力不僅僅是味覺的饗宴</div>
+                    <div class="text2">更是一件藝術品。</div>
+                    <div class="text3">無論是節日慶典還是重要場合</div>
+                    <div class="text4">都是表達心意的最佳選擇</div>
+                    <div class="text5">讓您的贈禮更添品味與心意</div>
 
+                </div>
+
+            </div>
         </section>
+        <img src="./index_images/bottom-bg.svg" alt="">
+
+
 </main>
 <footer></footer>
 <div></div>
