--- a/Product_details_page.html
+++ b/Product_details_page.html
@@ -94,16 +94,63 @@
             <div id="product_details_page_tab_div4">
                 <div id="product_details_page_tab_div4_div1">
                     <div>
-                    <p>產品口味</p>
-                    <div id="product_details_page_tab_div4_div2">
-                        <p>介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹
-                            介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹
-                            介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹
-                        </p>
+                        <p id="product_details_page_tab_div4_div1_p">產品口味</p>
+                        <div id="product_details_page_tab_div4_div2">
+                            <p id="product_details_page_tab_div4_div2_p">介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹
+                                介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹
+                                介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹介紹
+                            </p>
+                        </div>
                     </div>
-                </div>
                     <div id="product_details_page_tab_div4_img">
                         <img src="./images/Product-details-page/first_block/Frame 10.svg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div id="product_details_page_tab_div5">
+                <p id="product_details_page_tab_div5_p">產品資訊</p>
+            </div>
+            <div id="product_details_page_tab_div6">
+                <div id="product_details_page_tab_div6_div">
+                    <div>
+                        <div id="product_details_page_tab_div6_div_chookname">
+                            <p>摩卡經典禮盒12入</p>
+                        </div>
+                        <div id="product_details_page_tab_div6_div_chookdan">
+                            <p id="product_details_page_tab_div6_div_chookdan_p1">產品成分:</p>
+                            <p id="product_details_page_tab_div6_div_chookdan_p2">黑巧克力（砂糖、可可膏、可可脂、大豆卵磷脂、香料）
+                            </p>
+                            <p id="product_details_page_tab_div6_div_chookdan_p2-1">咖啡風味巧克力（砂糖、可可膏、可可脂、咖啡提取物、大豆卵磷脂、香料）
+                            </p>
+                            <p id="product_details_page_tab_div6_div_chookdan_p3">過敏成分: 乳製品</p>
+                            <p id="product_details_page_tab_div6_div_chookdan_p4">保存期限:24個月 (2025/7/15 )
+                            </p>
+                            <p id="product_details_page_tab_div6_div_chookdan_p5">保存方法:請放置於陰涼乾燥處，最適合的存放溫度為16度至22度
+                            </p>
+                            <p id="product_details_page_tab_div6_div_chookdan_p6">淨克重: 150公克
+                            </p>
+                        </div>
+                    </div>
+                    <div id="product_details_page_tab_div6_div_cash">
+                        <div>
+                            <p id="product_details_page_tab_div6_div_cash_menu">付款方式</p>
+                            <div>
+                                <p id="product_details_page_tab_div6_div_cash_p1">信用卡</p>
+                                <p id="product_details_page_tab_div6_div_cash_p2">ATM付款</p>
+                                <p id="product_details_page_tab_div6_div_cash_p3">貨到付款</p>
+                                <p id="product_details_page_tab_div6_div_cash_p4">LINE Pay</p>
+                                <p id="product_details_page_tab_div6_div_cash_p5">街口支付</p>
+                            </div>
+                        </div>
+                        <div>
+                            <p id="product_details_page_tab_div6_div_cash_outin">付款方式</p>
+                            <div>
+                                <p id="product_details_page_tab_div6_div_cash_outin_p1">宅配</p>
+                                <p id="product_details_page_tab_div6_div_cash_outin_p2">超商取貨</p>
+                                <p id="product_details_page_tab_div6_div_cash_outin_p3">貨到付款</p>
+                                <p id="product_details_page_tab_div6_div_cash_outin_p4">商店門市自取</p>
+                            </div>u
+                        </div>
                     </div>
                 </div>
             </div>
