0817-Chocolate_custom_screen2

--- a/Product_details_page.html
+++ b/Product_details_page.html
@@ -52,7 +52,9 @@
                     <div id="product_details_page_tab_div1_product_increase_or_decrease">
                         <div id="product_details_page_tab_div1_produc_minus_sign">
                             <button>
+                                <a href="#">
                                 <img src="./images/Product-details-page/first_block/Frame 5.svg" alt="">
+                            </a>
                             </button>
                         </div>
                         <div>
@@ -60,7 +62,9 @@
                         </div>
                         <div id="product_details_page_tab_div1_produc_plus_sign">
                             <button>
+                                <a href="#">
                                 <img src="./images/Product-details-page/first_block/Frame 6.svg" alt="">
+                            </a>
                             </button>
                         </div>
                     </div>
@@ -149,9 +153,22 @@
                                 <p id="product_details_page_tab_div6_div_cash_outin_p2">超商取貨</p>
                                 <p id="product_details_page_tab_div6_div_cash_outin_p3">貨到付款</p>
                                 <p id="product_details_page_tab_div6_div_cash_outin_p4">商店門市自取</p>
-                            </div>u
+                            </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div id="product_details_page_tab_div7">
+                <p id="product_details_page_tab_div7_p">關聯商品</p>
+            </div>
+            <div id="product_details_page_tab_div8">
+                <div id="product_details_page_tab_div9">
+                    <a href="#" id="product_details_page_tab_div9_img1"><img
+                            src="./images/Product-details-page/first_block/Frame 11.svg" alt=""> </a>
+                    <a href="#" id="product_details_page_tab_div9_img2"><img
+                            src="./images/Product-details-page/first_block/Frame 12.svg" alt=""></a>
+                    <a href="#" id="product_details_page_tab_div9_img3"><img
+                            src="./images/Product-details-page/first_block/Frame 13.svg" alt=""></a>
                 </div>
             </div>
         </div>
