--- a/test1.html
+++ b/test1.html
@@ -6,43 +6,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test1</title>
     <style>
-        .scetion{
-            display:flex;
-            width: 100vw;
+        section {
+            /* position: relative; */
+            display: flex;
             height: 100vh;
+            /* width: 100vw; */
+            padding: 200px;
             align-items: center;
-            
-        }
-        .wrap {
-            padding: 20% 20% 30% 20%;
-        }
-        .brown {
-            flex: 1;
-            position: relative;
-            background-color: bisque;
-            width: 60vw;
-            height: 50vh;
+            justify-content: center;
+            background-color:  lightpink;
         }
 
-        .circle_text {
+
+
+        #box1 {
+
             position: absolute;
-            background-color: black;
-            width: 200px;
-            height: 200px;
-            top: -20%;
-            left: -20%;
+            width: 1200px;
+            /* 初始宽度 */
+            height: 900px;
+            /* 初始高度 */
+            background-color: lightblue;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 999;
+        }
+
+        #box2 {
+            position: absolute;
+            z-index: -1;
+            width: 100px;
+            /* 初始宽度 */
+            height: 100px;
+            /* 初始高度 */
+            background-color: lightyellow;
+            top: 0;
+            left: 0;
+            transform: translate(-50%, -50%);
+        }
+
+        .text {
+            position: absolute;
+            font-size: 10rem;
         }
     </style>
 </head>
-<div>
-    <div class="section">
-        <div class="wrap">
-            <div class="brown">
-                <div class="circle_text"></div>
+
+<body>
+
+    <section>
+
+        <div id="container">
+            <div id="box1">
+                <div id="box2"></div>
+                <div class="text">Hello World</div>
             </div>
         </div>
-    </div>
-</div>
+
+    </section>
+
+    <script>
+        function scaleContainer() {
+            const container = document.getElementById('container');
+            const box1 = document.getElementById('box1');
+            const containerWidth = container.offsetWidth;
+
+            // 如果窗口宽度小于600px，计算缩放比例
+            if (window.innerWidth < 1920) {
+                const scaleRatio = window.innerWidth / 1920;
+                box1.style.transform = `translate(-50%, -50%) scale(${scaleRatio})`;
+            } else {
+                // 还原缩放
+                box1.style.transform = 'translate(-50%, -50%) scale(1)';
+            }
+        }
+
+        // 初始调用
+        scaleContainer();
+
+        // 监听窗口大小变化
+        window.addEventListener('resize', scaleContainer);
+
+    </script>
 </body>
 
 </html>
