--- a/shop.html
+++ b/shop.html
@@ -12,67 +12,126 @@
     <header></header>
     <main>
         <section id="banner">
-            <div class="img_container"><img src="./images/shop_images/shop_banner.jpg" alt=""></div>
+            <div class="img_container"></div>
         </section>
-        <section id="item_content">
-            <div class="filter">
+        <section id="items_content">
+            <div id="filter" class="filter">
+                <div class="filter_list">
+                    <ul class="drop-down-menu">
+                        <li><a href="#">限定</a>
+                            <ul>
+                                <li><a href="#">情人節</a>
+                                </li>
+                                <li><a href="#">生日</a>
+                                </li>
+                                <li><a href="#">畢業</a>
+                                </li>
+                                <li><a href="#">其它節慶</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li><a href="#">數量</a>
+                        </li>
+                        <li><a href="#">價位</a>
+                        </li>
+                </div>
             </div>
+
             <div class="items_list">
-                <a class="item">
-                    <div class="item_pic_box"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
+                <div class="items_list">
+                    <a class="item">
+                        <div class="item_pic_box"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
                         <div class="item_name">黃金典雅禮盒12入</div>
                         <div class="item_price">NT 2,000</div>
-                        <div class="item_text">巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹</div>
-                </a>
-                <a class="item">
-                    <div class="item_pic"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
-                        <div class="item_name">黃金典雅禮盒12入</div>
-                        <div class="item_price">NT 2,000</div>
-                        <div class="item_text">巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹</div>
-                </a>
-                <a class="item">
-                    <div class="item_pic"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
-                        <div class="item_name">黃金典雅禮盒12入</div>
-                        <div class="item_price">NT 2,000</div>
-                        <div class="item_text">巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹</div>
-                </a>
-                <a class="item">
-                    <div class="item_pic"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
-                        <div class="item_name">黃金典雅禮盒12入</div>
-                        <div class="item_price">NT 2,000</div>
-                        <div class="item_text">巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹</div>
-                </a>
-                <a class="item">
-                    <div class="item_pic"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
-                        <div class="item_name">黃金典雅禮盒12入</div>
-                        <div class="item_price">NT 2,000</div>
-                        <div class="item_text">巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹</div>
-                </a>
-                <a class="item">
-                    <div class="item_pic"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
-                        <div class="item_name">黃金典雅禮盒12入</div>
-                        <div class="item_price">NT 2,000</div>
-                        <div class="item_text">巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹</div>
-                </a>
-                <a class="item">
-                    <div class="item_pic"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
-                        <div class="item_name">黃金典雅禮盒12入</div>
-                        <div class="item_price">NT 2,000</div>
-                        <div class="item_text">巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹</div>
-                </a>
-                <a class="item">
-                    <div class="item_pic"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
-                        <div class="item_name">黃金典雅禮盒12入</div>
-                        <div class="item_price">NT 2,000</div>
-                        <div class="item_text">巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹巧克力介紹</div>
-                </a>
-               
+                        <div class="item_text">這款黃金典雅禮盒內含精選巧克力，包裝豪華，適合送禮自用皆宜，展現品味與高貴。</div>
+                    </a>
+                    <a class="item">
+                        <div class="item_pic"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
+                        <div class="item_name">手工奢華巧克力禮盒12入</div>
+                        <div class="item_price">NT 2,600</div>
+                        <div class="item_text">每顆巧克力皆由大師手工製作，結合頂級原料，讓您體驗無可比擬的奢華口感。</div>
+                    </a>
+                    <a class="item">
+                        <div class="item_pic"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
+                        <div class="item_name">璀璨星河禮盒12入</div>
+                        <div class="item_price">NT 2,800</div>
+                        <div class="item_text">璀璨星河禮盒帶來星光般的美麗，內含精緻巧克力，每一口都充滿浪漫與驚喜。</div>
+                    </a>
+                    <a class="item">
+                        <div class="item_pic"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
+                        <div class="item_name">璀璨七夕-情人節禮盒</div>
+                        <div class="item_price">NT 3,000</div>
+                        <div class="item_text">專為情人節設計的璀璨禮盒，展現愛意，巧克力的每一口都彷彿融化在心中。</div>
+                    </a>
+                    <a class="item">
+                        <div class="item_pic"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
+                        <div class="item_name">熱戀之吻-情人節禮盒</div>
+                        <div class="item_price">NT 3,000</div>
+                        <div class="item_text">熱戀之吻巧克力禮盒，特別為情人節打造，甜美的巧克力表達最深情的告白。</div>
+                    </a>
+                    <a class="item">
+                        <div class="item_pic"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
+                        <div class="item_name">90%黑金巧克力禮盒</div>
+                        <div class="item_price">NT 2,500</div>
+                        <div class="item_text">90%高濃度黑巧克力，帶來深邃的苦甜風味，滿足對巧克力的高標準需求。</div>
+                    </a>
+                    <a class="item">
+                        <div class="item_pic"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
+                        <div class="item_name">生日快樂-巧克力禮盒</div>
+                        <div class="item_price">NT 2,800</div>
+                        <div class="item_text">為生日精心準備的巧克力禮盒，充滿甜蜜和祝福，讓每一口都帶來快樂與驚喜。</div>
+                    </a>
+                    <a class="item">
+                        <div class="item_pic"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
+                        <div class="item_name">摩卡經典禮盒12入</div>
+                        <div class="item_price">NT 3,000</div>
+                        <div class="item_text">摩卡風味巧克力禮盒，結合濃郁咖啡香與細膩巧克力，帶來獨特的品味體驗。</div>
+                    </a>
+                    <a class="item">
+                        <div class="item_pic"> <img src="../chocoMaker/images/shop_images/item1.jpg" alt=""></div>
+                        <div class="item_name">麋鹿聖誕-巧克力禮盒</div>
+                        <div class="item_price">NT 3,000</div>
+                        <div class="item_text">聖誕節限定巧克力禮盒，精緻設計與美味巧克力，增添節日的歡樂與喜悅。</div>
+                    </a>
+                </div>
             </div>
-            <div class="change_page"></div>
+
+
+            <div class="change_page">
+                <div id="pages_num">
+                    <a href="#">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                </div>
+                <div class="next_pages">
+                    <a href="#" class="next_page_text"><img src="./images/footer_btn_nextpage.svg" alt=""></a>
+                </div>
+            </div>
         </section>
 
     </main>
-    <footer></footer>
+    <footer>
+        <div class="wrap">
+            <a class="logo" href="#"><img src="./images/footer_logo.svg" alt=""></a>
+            <div class="bottom_nav">               
+                <ul class="menu">
+                    <li><a href="./index.html" id="home">首頁</a></li>
+                    <li><a href="#" id="news">最新消息</a></li>
+                    <li><a href="./shop.html" id="shop">商品一覽</a></li>
+                    <li><a href="#" id="about">關於我們</a></li>
+                    <li><a href="#" id="Q&A">Q&A</a></li>
+                    <li><a href="#" id="shopping_car">購物車</a></li>
+                    <li><a href="#" id="member">會員專區</a></li>
+                </ul>
+            </div>
+            <div class="icon">
+                <a class="fb" href="#"></a>
+                <a class="ig" href="#"></a>
+                <a class="x" href="#"></a>
+            </div>
+        </div>
+        <div class="copyRight">© Mélange. All Rights Reserved.</div>
+    </footer>
 </body>
 
 </html>
