0817-Chocolate_custom_screen2

--- a/Product_details_page.html
+++ b/Product_details_page.html
@@ -171,6 +171,28 @@
                             src="./images/Product-details-page/first_block/Frame 13.svg" alt=""></a>
                 </div>
             </div>
+            <footer>
+                <div class="wrap">
+                    <a class="logo" href="#"><img src="./images/footer_logo.svg" alt=""></a>
+                    <div class="bottom_nav">               
+                        <ul class="menu">
+                            <li><a href="./index.html" id="home">首頁</a></li>
+                            <li><a href="#" id="news">最新消息</a></li>
+                            <li><a href="./shop.html" id="shop">商品一覽</a></li>
+                            <li><a href="#" id="about">關於我們</a></li>
+                            <li><a href="#" id="Q&A">Q&A</a></li>
+                            <li><a href="#" id="shopping_car">購物車</a></li>
+                            <li><a href="#" id="member">會員專區</a></li>
+                        </ul>
+                    </div>
+                    <div class="icon">
+                        <a class="fb" href="#"></a>
+                        <a class="ig" href="#"></a>
+                        <a class="x" href="#"></a>
+                    </div>
+                </div>
+                <div class="copyRight">© Mélange. All Rights Reserved.</div>
+            </footer>
         </div>
     </main>
     <!-- <script src="./js/jq.js"></script> -->
